y.output
Nonterminals useless in grammar

   unary_operator
   constant_expression
   designation
   designator_list
   designator
   M2


Terminals unused in grammar

   AUTO
   BREAK
   CASE
   CONTINUE
   DEFAULT
   ENUM
   EXTERN
   FLOAT
   GOTO
   INLINE
   LONG
   REGISTER
   RESTRICT
   SHORT
   SIGNED
   SIZEOF
   STATIC
   STRUCT
   TYPEDEF
   UNION
   UNSIGNED
   VOLATILE
   BOOL
   COMPLEX
   IMAGINARY
   ENUMERATION_CONSTANT
   '~'
   '!'


Rules useless in grammar

  138 unary_operator: '&'
  139               | '*'
  140               | '+'
  141               | '-'
  142               | '~'
  143               | '!'

  144 constant_expression: conditional_expression

  145 designation: designator_list '='

  146 designator_list: designator
  147                | designator_list designator

  148 designator: '[' constant_expression ']'
  149           | '.' id_var

  150 M2: /* empty */


Rules useless in parser due to conflicts

   91 parameter_type_list: /* empty */

  108 block_item_list_opt: /* empty */

  116 expression_opt: /* empty */

  137 N1: /* empty */


State 25 conflicts: 2 shift/reduce
State 30 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 158 conflicts: 1 shift/reduce
State 200 conflicts: 1 shift/reduce
State 210 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce
State 219 conflicts: 1 shift/reduce
State 220 conflicts: 1 reduce/reduce
State 221 conflicts: 1 shift/reduce
State 229 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: id_var
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 CONSTANT: INTEGER_CONSTANT
    6         | CHARACTER_CONSTANT
    7         | FLOATING_CONSTANT

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'
   10                   | postfix_expression '(' ')'
   11                   | postfix_expression '(' argument_expression_list ')'
   12                   | postfix_expression '.' id_var
   13                   | postfix_expression PTR_OP id_var
   14                   | postfix_expression INC_OP
   15                   | postfix_expression DEC_OP

   16 argument_expression_list: assignment_expression
   17                         | argument_expression_list ',' assignment_expression

   18 unary_expression: postfix_expression

   19 cast_expression: unary_expression
   20                | '(' type_name ')' cast_expression

   21 multiplicative_expression: cast_expression
   22                          | multiplicative_expression '*' cast_expression
   23                          | multiplicative_expression '/' cast_expression
   24                          | multiplicative_expression '%' cast_expression

   25 additive_expression: multiplicative_expression
   26                    | additive_expression '+' multiplicative_expression
   27                    | additive_expression '-' multiplicative_expression

   28 shift_expression: additive_expression
   29                 | shift_expression LEFT_OP additive_expression
   30                 | shift_expression RIGHT_OP additive_expression

   31 relational_expression: shift_expression
   32                      | relational_expression '<' shift_expression
   33                      | relational_expression '>' shift_expression
   34                      | relational_expression LE_OP shift_expression
   35                      | relational_expression GE_OP shift_expression

   36 equality_expression: relational_expression
   37                    | equality_expression EQ_OP relational_expression
   38                    | equality_expression NE_OP relational_expression

   39 and_expression: equality_expression
   40               | and_expression '&' M1 equality_expression

   41 exclusive_or_expression: and_expression
   42                        | exclusive_or_expression '^' and_expression

   43 inclusive_or_expression: exclusive_or_expression
   44                        | inclusive_or_expression '|' exclusive_or_expression

   45 logical_and_expression: inclusive_or_expression
   46                       | logical_and_expression AND_OP inclusive_or_expression

   47 logical_or_expression: logical_and_expression
   48                      | logical_or_expression OR_OP logical_and_expression

   49 conditional_expression: logical_or_expression
   50                       | logical_or_expression '?' expression ':' conditional_expression

   51 assignment_expression: conditional_expression
   52                      | unary_expression assignment_operator assignment_expression

   53 assignment_operator: '='
   54                    | MUL_ASSIGN
   55                    | DIV_ASSIGN
   56                    | MOD_ASSIGN
   57                    | ADD_ASSIGN
   58                    | SUB_ASSIGN
   59                    | LEFT_ASSIGN
   60                    | RIGHT_ASSIGN
   61                    | AND_ASSIGN
   62                    | XOR_ASSIGN
   63                    | OR_ASSIGN

   64 expression: assignment_expression
   65           | expression ',' assignment_expression

   66 declaration: declaration_specifiers ';'
   67            | declaration_specifiers init_declarator_list ';'

   68 declaration_specifiers: type_specifier
   69                       | type_specifier declaration_specifiers

   70 init_declarator_list: init_declarator
   71                     | init_declarator_list ',' init_declarator

   72 init_declarator: declarator
   73                | declarator '=' initializer

   74 type_specifier: VOID
   75               | CHAR
   76               | INT
   77               | DOUBLE

   78 specifier_qualifier_list: type_specifier specifier_qualifier_list
   79                         | type_specifier

   80 declarator: pointer direct_declarator
   81           | direct_declarator

   82 direct_declarator: id_var
   83                  | '(' declarator ')'
   84                  | direct_declarator '[' assignment_expression ']'
   85                  | direct_declarator '[' ']'
   86                  | direct_declarator '(' parameter_type_list ')'
   87                  | direct_declarator '(' identifier_list ')'
   88                  | direct_declarator '(' ')'

   89 pointer: '*'
   90        | '*' pointer

   91 parameter_type_list: /* empty */
   92                    | parameter_list

   93 parameter_list: declaration_specifiers declarator
   94               | parameter_list ',' declaration_specifiers declarator

   95 identifier_list: id_var
   96                | identifier_list ',' id_var

   97 type_name: specifier_qualifier_list

   98 id_var: IDENTIFIER

   99 initializer: assignment_expression

  100 statement: compound_statement
  101          | expression_statement
  102          | selection_statement
  103          | iteration_statement
  104          | jump_statement

  105 compound_statement: '{' '}'
  106                   | '{' block_item_list_opt '}'

  107 block_item_list_opt: block_item_list
  108                    | /* empty */

  109 block_item_list: block_item
  110                | block_item_list M1 block_item

  111 block_item: declaration
  112           | statement

  113 expression_statement: ';'
  114                     | expression_opt ';'

  115 expression_opt: expression
  116               | /* empty */

  117 selection_statement: IF '(' expression ')' M1 statement
  118                    | IF '(' expression ')' M1 statement N1 ELSE M1 statement
  119                    | SWITCH '(' expression ')' statement

  120 iteration_statement: WHILE M1 '(' expression ')' M1 statement
  121                    | DO M1 statement M1 WHILE '(' expression ')' ';'
  122                    | FOR '(' expression_statement expression_statement ')' statement
  123                    | FOR '(' expression_statement expression_statement expression ')' statement

  124 jump_statement: RETURN ';'
  125               | RETURN expression ';'

  126 translation_unit: external_declaration
  127                 | translation_unit external_declaration

  128 external_declaration: function_definition
  129                     | declaration

  130 function_definition: declaration_specifiers declarator declaration_list compound_statement
  131                    | declaration_specifiers declarator compound_statement
  132                    | declarator declaration_list compound_statement
  133                    | declarator compound_statement

  134 declaration_list: declaration
  135                 | declaration_list declaration

  136 M1: /* empty */

  137 N1: /* empty */


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'%' (37) 24
'&' (38) 40
'(' (40) 4 10 11 20 83 86 87 88 117 118 119 120 121 122 123
')' (41) 4 10 11 20 83 86 87 88 117 118 119 120 121 122 123
'*' (42) 22 89 90
'+' (43) 26
',' (44) 17 65 71 94 96
'-' (45) 27
'.' (46) 12
'/' (47) 23
':' (58) 50
';' (59) 66 67 113 114 121 124 125
'<' (60) 32
'=' (61) 53 73
'>' (62) 33
'?' (63) 50
'[' (91) 9 84 85
']' (93) 9 84 85
'^' (94) 42
'{' (123) 105 106
'|' (124) 44
'}' (125) 105 106
'~' (126)
error (256)
AUTO (258)
BREAK (259)
CASE (260)
CHAR (261) 75
CONTINUE (262)
DEFAULT (263)
DO (264) 121
DOUBLE (265) 77
ELSE (266) 118
ENUM (267)
EXTERN (268)
FLOAT (269)
FOR (270) 122 123
GOTO (271)
IF (272) 117 118
INLINE (273)
INT (274) 76
LONG (275)
REGISTER (276)
RESTRICT (277)
RETURN (278) 124 125
SHORT (279)
SIGNED (280)
SIZEOF (281)
STATIC (282)
STRUCT (283)
SWITCH (284) 119
TYPEDEF (285)
UNION (286)
UNSIGNED (287)
VOID (288) 74
VOLATILE (289)
WHILE (290) 120 121
BOOL (291)
COMPLEX (292)
IMAGINARY (293)
IDENTIFIER (294) 98
INTEGER_CONSTANT (295) 5
FLOATING_CONSTANT (296) 7
CHARACTER_CONSTANT (297) 6
STRING_LITERAL (298) 3
INC_OP (299) 14
PTR_OP (300) 13
LEFT_OP (301) 29
RIGHT_OP (302) 30
LE_OP (303) 34
GE_OP (304) 35
MUL_ASSIGN (305) 54
DIV_ASSIGN (306) 55
MOD_ASSIGN (307) 56
ADD_ASSIGN (308) 57
SUB_ASSIGN (309) 58
LEFT_ASSIGN (310) 59
DEC_OP (311) 15
EQ_OP (312) 37
RIGHT_ASSIGN (313) 60
NE_OP (314) 38
AND_ASSIGN (315) 61
XOR_ASSIGN (316) 62
AND_OP (317) 46
OR_OP (318) 48
OR_ASSIGN (319) 63
ENUMERATION_CONSTANT (320)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
primary_expression (91)
    on left: 1 2 3 4, on right: 8
CONSTANT (92)
    on left: 5 6 7, on right: 2
postfix_expression (93)
    on left: 8 9 10 11 12 13 14 15, on right: 9 10 11 12 13 14 15 18
argument_expression_list (94)
    on left: 16 17, on right: 11 17
unary_expression (95)
    on left: 18, on right: 19 52
cast_expression (96)
    on left: 19 20, on right: 20 21 22 23 24
multiplicative_expression (97)
    on left: 21 22 23 24, on right: 22 23 24 25 26 27
additive_expression (98)
    on left: 25 26 27, on right: 26 27 28 29 30
shift_expression (99)
    on left: 28 29 30, on right: 29 30 31 32 33 34 35
relational_expression (100)
    on left: 31 32 33 34 35, on right: 32 33 34 35 36 37 38
equality_expression (101)
    on left: 36 37 38, on right: 37 38 39 40
and_expression (102)
    on left: 39 40, on right: 40 41 42
exclusive_or_expression (103)
    on left: 41 42, on right: 42 43 44
inclusive_or_expression (104)
    on left: 43 44, on right: 44 45 46
logical_and_expression (105)
    on left: 45 46, on right: 46 47 48
logical_or_expression (106)
    on left: 47 48, on right: 48 49 50
conditional_expression (107)
    on left: 49 50, on right: 50 51
assignment_expression (108)
    on left: 51 52, on right: 16 17 52 64 65 84 99
assignment_operator (109)
    on left: 53 54 55 56 57 58 59 60 61 62 63, on right: 52
expression (110)
    on left: 64 65, on right: 4 9 50 65 115 117 118 119 120 121 123
    125
declaration (111)
    on left: 66 67, on right: 111 129 134 135
declaration_specifiers (112)
    on left: 68 69, on right: 66 67 69 93 94 130 131
init_declarator_list (113)
    on left: 70 71, on right: 67 71
init_declarator (114)
    on left: 72 73, on right: 70 71
type_specifier (115)
    on left: 74 75 76 77, on right: 68 69 78 79
specifier_qualifier_list (116)
    on left: 78 79, on right: 78 97
declarator (117)
    on left: 80 81, on right: 72 73 83 93 94 130 131 132 133
direct_declarator (118)
    on left: 82 83 84 85 86 87 88, on right: 80 81 84 85 86 87 88
pointer (119)
    on left: 89 90, on right: 80 90
parameter_type_list (120)
    on left: 91 92, on right: 86
parameter_list (121)
    on left: 93 94, on right: 92 94
identifier_list (122)
    on left: 95 96, on right: 87 96
type_name (123)
    on left: 97, on right: 20
id_var (124)
    on left: 98, on right: 1 12 13 82 95 96
initializer (125)
    on left: 99, on right: 73
statement (126)
    on left: 100 101 102 103 104, on right: 112 117 118 119 120 121
    122 123
compound_statement (127)
    on left: 105 106, on right: 100 130 131 132 133
block_item_list_opt (128)
    on left: 107 108, on right: 106
block_item_list (129)
    on left: 109 110, on right: 107 110
block_item (130)
    on left: 111 112, on right: 109 110
expression_statement (131)
    on left: 113 114, on right: 101 122 123
expression_opt (132)
    on left: 115 116, on right: 114
selection_statement (133)
    on left: 117 118 119, on right: 102
iteration_statement (134)
    on left: 120 121 122 123, on right: 103
jump_statement (135)
    on left: 124 125, on right: 104
translation_unit (136)
    on left: 126 127, on right: 0 127
external_declaration (137)
    on left: 128 129, on right: 126 127
function_definition (138)
    on left: 130 131 132 133, on right: 128
declaration_list (139)
    on left: 134 135, on right: 130 132 135
M1 (140)
    on left: 136, on right: 40 110 117 118 120 121
N1 (141)
    on left: 137, on right: 118


State 0

    0 $accept: . translation_unit $end

    CHAR        shift, and go to state 1
    DOUBLE      shift, and go to state 2
    INT         shift, and go to state 3
    VOID        shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 6
    '*'         shift, and go to state 7

    declaration             go to state 8
    declaration_specifiers  go to state 9
    type_specifier          go to state 10
    declarator              go to state 11
    direct_declarator       go to state 12
    pointer                 go to state 13
    id_var                  go to state 14
    translation_unit        go to state 15
    external_declaration    go to state 16
    function_definition     go to state 17


State 1

   75 type_specifier: CHAR .

    $default  reduce using rule 75 (type_specifier)


State 2

   77 type_specifier: DOUBLE .

    $default  reduce using rule 77 (type_specifier)


State 3

   76 type_specifier: INT .

    $default  reduce using rule 76 (type_specifier)


State 4

   74 type_specifier: VOID .

    $default  reduce using rule 74 (type_specifier)


State 5

   98 id_var: IDENTIFIER .

    $default  reduce using rule 98 (id_var)


State 6

   83 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 6
    '*'         shift, and go to state 7

    declarator         go to state 18
    direct_declarator  go to state 12
    pointer            go to state 13
    id_var             go to state 14


State 7

   89 pointer: '*' .
   90        | '*' . pointer

    '*'  shift, and go to state 7

    $default  reduce using rule 89 (pointer)

    pointer  go to state 19


State 8

  129 external_declaration: declaration .

    $default  reduce using rule 129 (external_declaration)


State 9

   66 declaration: declaration_specifiers . ';'
   67            | declaration_specifiers . init_declarator_list ';'
  130 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  131                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 6
    '*'         shift, and go to state 7
    ';'         shift, and go to state 20

    init_declarator_list  go to state 21
    init_declarator       go to state 22
    declarator            go to state 23
    direct_declarator     go to state 12
    pointer               go to state 13
    id_var                go to state 14


State 10

   68 declaration_specifiers: type_specifier .
   69                       | type_specifier . declaration_specifiers

    CHAR    shift, and go to state 1
    DOUBLE  shift, and go to state 2
    INT     shift, and go to state 3
    VOID    shift, and go to state 4

    $default  reduce using rule 68 (declaration_specifiers)

    declaration_specifiers  go to state 24
    type_specifier          go to state 10


State 11

  132 function_definition: declarator . declaration_list compound_statement
  133                    | declarator . compound_statement

    CHAR    shift, and go to state 1
    DOUBLE  shift, and go to state 2
    INT     shift, and go to state 3
    VOID    shift, and go to state 4
    '{'     shift, and go to state 25

    declaration             go to state 26
    declaration_specifiers  go to state 27
    type_specifier          go to state 10
    compound_statement      go to state 28
    declaration_list        go to state 29


State 12

   81 declarator: direct_declarator .
   84 direct_declarator: direct_declarator . '[' assignment_expression ']'
   85                  | direct_declarator . '[' ']'
   86                  | direct_declarator . '(' parameter_type_list ')'
   87                  | direct_declarator . '(' identifier_list ')'
   88                  | direct_declarator . '(' ')'

    '('  shift, and go to state 30
    '['  shift, and go to state 31

    $default  reduce using rule 81 (declarator)


State 13

   80 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 6

    direct_declarator  go to state 32
    id_var             go to state 14


State 14

   82 direct_declarator: id_var .

    $default  reduce using rule 82 (direct_declarator)


State 15

    0 $accept: translation_unit . $end
  127 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 33
    CHAR        shift, and go to state 1
    DOUBLE      shift, and go to state 2
    INT         shift, and go to state 3
    VOID        shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '('         shift, and go to state 6
    '*'         shift, and go to state 7

    declaration             go to state 8
    declaration_specifiers  go to state 9
    type_specifier          go to state 10
    declarator              go to state 11
    direct_declarator       go to state 12
    pointer                 go to state 13
    id_var                  go to state 14
    external_declaration    go to state 34
    function_definition     go to state 17


State 16

  126 translation_unit: external_declaration .

    $default  reduce using rule 126 (translation_unit)


State 17

  128 external_declaration: function_definition .

    $default  reduce using rule 128 (external_declaration)


State 18

   83 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 35


State 19

   90 pointer: '*' pointer .

    $default  reduce using rule 90 (pointer)

